# rpg-inventory-revamp

./: CMakeLists.txt  main.cpp
data/: items.json
includes/: influence.h  item.h  menu.h  tmenu.h
includes/character/: character-class.h  character.h  limited-stat.h
includes/container/: container.h
includes/container/chest/: chest.h
includes/container/inventory/: inventory.h
includes/helpers/: input.h
includes/item/: item-factory.h  item.h  rarity.h
includes/item/weapon/: stats-helpers.h  weapon.h
includes/item/weapon/melee/: melee.h
includes/item/weapon/melee/models/: axe.h  hammer.h  scythe.h  sword.h
includes/item/weapon/ranged/: ranged.h
includes/item/weapon/ranged/models/: blunderbuss.h  cannon.h  pistol.h
includes/menu/: menu.h
includes/utils/: main-menu.h  startup-menu.h
includes/weapon/: weapon.h
includes/weapon/melee/models/: axe.h  scythe.h  sword.h
includes/weapon/ranged/models/: cannon.h
includes/world/: world.h
src/: menu.cpp  tmenu.cpp
src/character/: character-class.cpp  character.cpp  limited-stat.cpp
src/container/: container.cpp
src/container/chest/: chest.cpp
src/container/inventory/: inventory.cpp
src/helpers/: input.cpp
src/item/: item.cpp
src/item/weapon/: stats-helpers.cpp  weapon.cpp
src/item/weapon/melee/: melee.cpp
src/item/weapon/ranged/: ranged.cpp
src/menu/: menu.cpp
src/utils/: main-menu.cpp  startup-menu.cpp
